# maestro

./: .gitignore  .taplo.toml  Cargo.toml  README.md  WORKFLOW.md  maestro.example.toml
docs/: index.md
docs/guide/: index.md  pilot.md
docs/plans/: 2026-03-12_maestro-app-server-mvp.md  2026-03-12_maestro-upstream-alignment-dogfood.md  2026-03-13_maestro-daemon-supervision.md  2026-03-13_maestro-first-live-pilot-hardening.md  2026-03-13_maestro-pr-backed-handoff.md  2026-03-13_maestro-structural-runtime-followups.md  2026-03-17_maestro-xy-124-remove-sqlite-runtime-state.md  2026-03-17_maestro-xy-126-retry-queue-backoff.md  2026-03-17_maestro-xy-128-workflow-reload-last-known-good.md  2026-03-18_maestro-xy-162-terminal-tracker-handoff.json  2026-03-18_maestro-xy-165-retry-recovery-slug-normalization.json  2026-03-19_maestro-xy-156-concurrency-recovery.json  2026-03-19_maestro-xy-157-continuation-turns.json  2026-03-19_maestro-xy-176-manual-intervention-policy.json  2026-03-19_maestro-xy-183-read-after-write-lag.json  2026-03-20_maestro-xy-160-post-in-review-lifecycle.json  2026-03-20_maestro-xy-173-review-state-classifier.json  2026-03-21_maestro-xy-174-review-repair-reentry.json
docs/spec/: index.md  system_app_server_contract.md  system_maestro_owned_lane_policy.md  system_maestro_post_review_lifecycle.md  system_maestro_runtime.md  system_tracker_tool_contract.md  system_workflow_contract.md
migrations/: 0001_init.sql
src/: agent.rs  cli.rs  config.rs  github.rs  lib.rs  main.rs  orchestrator.rs  state.rs  tracker.rs  workflow.rs  workspace.rs
(+6 files in other folders)
