[package]
authors     = ["Xavier Lau <x@acg.box>"]
build       = "build.rs"
categories  = []
description = "Repo-native orchestration for autonomous coding agents."
edition     = "2024"
homepage    = "https://github.com/helixbox/maestro"
keywords    = ["agents", "automation", "codex", "orchestration"]
license     = "GPL-3.0"
name        = "maestro"
readme      = "README.md"
repository  = "https://github.com/helixbox/maestro"
resolver    = "3"
version     = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[profile.final-release]
inherits = "release"
lto      = true

[build-dependencies]
# crates.io
vergen-gitcl = { version = "9.1", features = ["cargo"] }

[dependencies]
# crates.io
clap               = { version = "4.6", features = ["derive"] }
color-eyre         = { version = "0.6" }
directories        = { version = "6.0" }
reqwest            = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
rusqlite           = { version = "0.38", features = ["bundled"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
time               = { version = "0.3", features = ["formatting"] }
toml               = "1.0"
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# crates.io
tempfile = "3.27"
